--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_executable(main 
     main.cpp
-    Program.cpp
-    Container.cpp)
+    Program.cpp)
 
 target_link_libraries(main PRIVATE sfml-graphics)
